package com.criso.model;

/**
 * Enumeração que representa o status de uma despesa.
 */
public enum StatusDespesa {
    /** Despesa já foi paga */
    Pago,
    /** Despesa ainda está pendente */
    Pendente
}